@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-24T16:06:35Z",
+  "timestamp" : "2022-06-27T00:33:53Z",
   "count_outdated" : 394,
   "uniques_outdated" : 88,
-  "count" : 495,
-  "uniques" : 93,
+  "count" : 504,
+  "uniques" : 94,
   "views" : [
     {
       "timestamp": "2022-06-14T00:00:00Z",
@@ -37,6 +37,13 @@
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-26T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 9, 9 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
