@@ -1,6 +1,6 @@
 {
-  "count": 101,
-  "uniques": 2,
+  "count": 110,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2022-06-14T00:00:00Z",
@@ -25,6 +25,11 @@
     {
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-26T00:00:00Z",
+      "count": 9,
       "uniques": 1
     }
   ]
